forgot to branch, added crafting recipes for tools, added smelting recipe for material

--- a/src/main/resources/assets/tut/lang/en_US.lang
+++ b/src/main/resources/assets/tut/lang/en_US.lang
@@ -1,5 +1,6 @@
 tile.tut_block.name=Tutorial Ore
 item.tut_item.name=Tutorial Item
+item.tut_carbite.name=Carbite
 item.tut_axe.name=Tutorial Axe
 item.tut_hoe.name=Tutorial Hoe
 item.tut_pickaxe.name=Tutorial Pickaxe
